--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DATABASE_URL="postgresql://neondb_owner:npg_S2dTvDXHBRl4@ep-shiny-haze-afcdvtmf-pooler.c-2.us-west-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
-PORT=4000
+DATABASE_URL="postgresql://neondb_owner:npg_S2dTvDXHBRl4@ep-shiny-haze-afcdvtmf.c-2.us-west-2.aws.neon.tech/neondb?sslmode=require"
+# DATABASE_URL_UNPOOLED left here just as a reference; Prisma uses DATABASE_URL above
+# DATABASE_URL_UNPOOLED="postgresql://neondb_owner:npg_S2dTvDXHBRl4@ep-shiny-haze-afcdvtmf.c-2.us-west-2.aws.neon.tech/neondb?sslmode=require"
