--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "csv-parse": "^6.1.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.22.0"
   }
 }
