--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "@prisma/client": "^5.22.0",
     "@types/papaparse": "^5.5.1",
     "csv-parse": "^6.1.0",
+    "csv-parser": "^3.2.0",
     "papaparse": "^5.5.3"
   },
   "devDependencies": {
