--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "prisma": "^6.19.1",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.0",
+    "@vitejs/plugin-react-swc": "^4.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react-swc": "^4.0.0",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.0.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "postcss": "^8.4.49",
-    "prisma": "^6.19.1",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.0"
+    "eslint-plugin-react-hooks": "^5.0.0"
   }
 }
