feat: migrate from npm to pnpm for faster builds
- Create pnpm-workspace.yaml for monorepo support
- Update all package.json scripts to use pnpm
- Delete package-lock.json files
- Render will use PNPM_VERSION env var to install pnpm

--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "// NOTE_1": "Front-end (React/Vite) lives in ./client",
     "// NOTE_2": "API server (Express/TS) lives in ./server",
     "// NOTE_3": "These scripts are just delegators so you always run them from repo root",
-    "dev": "cd client && npm run dev",
-    "build": "cd client && npm install && npm run build && cd ../server && npm install && npx prisma generate --schema ../prisma/schema.prisma",
-    "server": "cd server && npm start",
-    "start": "cd server && npm start",
-    "preview": "cd client && npm run preview",
-    "lint": "cd client && npm run lint",
-    "prisma:migrate": "cd server && npx prisma migrate dev",
-    "prisma:generate": "cd server && npx prisma generate --schema ../prisma/schema.prisma"
+    "dev": "cd client && pnpm dev",
+    "build": "cd client && pnpm install && pnpm build && cd ../server && pnpm install && pnpm exec prisma generate --schema ../prisma/schema.prisma",
+    "server": "cd server && pnpm start",
+    "start": "cd server && pnpm start",
+    "preview": "cd client && pnpm preview",
+    "lint": "cd client && pnpm lint",
+    "prisma:migrate": "cd server && pnpm exec prisma migrate dev",
+    "prisma:generate": "cd server && pnpm exec prisma generate --schema ../prisma/schema.prisma"
   },
   "dependencies": {
     "@prisma/client": "^6.19.1",
