--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "// NOTE_2": "API server (Express/TS) lives in ./server",
     "// NOTE_3": "These scripts are just delegators so you always run them from repo root",
     "dev": "cd client && pnpm dev",
-    "build": "cd client && pnpm install && pnpm build && cd ../server && pnpm install && pnpm exec prisma generate --schema ../prisma/schema.prisma",
+    "build": "pnpm install && cd client && pnpm install && pnpm build && cd ../server && pnpm install && cd .. && pnpm exec prisma generate --schema ./prisma/schema.prisma",
     "server": "cd server && pnpm start",
     "start": "cd server && pnpm start",
     "preview": "cd client && pnpm preview",
