--- a/package.json
+++ b/package.json
@@ -16,23 +16,23 @@
     "prisma:generate": "cd server && pnpm exec prisma generate --schema ../prisma/schema.prisma"
   },
   "dependencies": {
-    "@prisma/client": "^6.19.1",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "prisma": "^6.19.1",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.0",
+    "@prisma/client": "^6.19.2",
     "@vitejs/plugin-react-swc": "^4.0.0",
     "autoprefixer": "^10.4.20",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.10"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "eslint": "^9.0.0",
-    "eslint-plugin-react-hooks": "^5.0.0"
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "prisma": "^6.19.2"
   }
 }
