refactor: modularize auth routes and harden config

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,30 @@
-# Database
-DATABASE_URL="postgresql://user:password@localhost:5432/fbst?schema=public"
+# Server Configuration
+PORT=4001
+CLIENT_URL=http://localhost:5173
+DATABASE_URL="postgresql://user:password@localhost:5432/fbst"
 
-# Server
-PORT=5000
-CLIENT_URL=http://localhost:3000
+# Auth Configuration (Required)
+# ------------------------------------------------------------------
+# Get these from Google Cloud Console & Yahoo Developer Portal
+# ------------------------------------------------------------------
+
+# Google
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+# Leave GOOGLE_REDIRECT_URI empty for local dev (auto-detected: http://localhost:5173/api/auth/google/callback)
+# Set explicitly for production (https://fbst-api.onrender.com/api/auth/google/callback)
+GOOGLE_REDIRECT_URI=
+
+# Yahoo
+YAHOO_CLIENT_ID=
+YAHOO_CLIENT_SECRET=
+# Leave YAHOO_REDIRECT_URI empty for local dev (auto-detected: https://localhost:4000/api/auth/yahoo/callback)
+# Set explicitly for production
+YAHOO_REDIRECT_URI=
+
+# Session Security
+# Generate a strong random string for production
+SESSION_SECRET=super_secret_session_key_DO_NOT_USE_IN_PROD
 
 # Environment
 NODE_ENV=development
