--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -16,7 +16,7 @@
     "sourceMap": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "src/scripts"]
 }
 
 
