--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "csv-parse": "^6.1.0",
     "csv-parser": "^3.2.0",
     "express": "^4.19.2",
+    "@supabase/supabase-js": "^2.48.1",
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
