--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "papaparse": "^5.5.3",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.10",
@@ -34,7 +35,6 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^22.10.2",
     "prisma": "^6.19.1",
-    "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
 }
