--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "start": "npx tsx src/index.ts",
     "dev": "npx tsx --watch src/index.ts",
     "seed": "npx tsx src/seed.ts",
-    "db:push": "npx prisma db push --schema ../prisma/schema.prisma --accept-data-loss"
+    "db:push": "npx prisma db push --schema ../prisma/schema.prisma --accept-data-loss",
+    "postinstall": "prisma generate --schema=../prisma/schema.prisma"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
